Fix center alignment of project's detail container (on IE).

--- a/css/style.css
+++ b/css/style.css
@@ -534,7 +534,7 @@
     line-height: normal; }
   .project__details-container {
     width: 70%;
-    margin: 0 auto; }
+    margin: 0 15%; }
     @media only screen and (max-width: 400px) {
       .project__details-container {
         width: 80%; } }
