--- a/sass/_portfolio-section.scss
+++ b/sass/_portfolio-section.scss
@@ -149,7 +149,7 @@
 
     &__details-container {
         width: 70%;
-        margin: 0 auto;
+        margin: 0 15%;
 
         @media only screen and (max-width: 400px) {
             width: 80%;
